[package]
name = "trxx"
version = "0.1.2"
edition = "2021"
description = "A tool to pack and unpack text files"
authors = ["JayFate <37610029@qq.com>"]
license = "MIT"

[[bin]]
name = "trxx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4.0"
serde_json = "1.0" 